# cursorevening

./: .gitignore  CHANGELOG.md  LICENSE  README.md  config.json  example_usage.py  main.py  pyproject.toml  requirements.txt  selenium_mcp_server.py  setup.py  test_installation.py
config/: __init__.py  server_config.py
examples/: __init__.py  form_automation.py  testing_workflows.py  web_scraping.py
selenium_mcp_server/: __init__.py  browser_manager.py  main.py
tests/: __init__.py  test_integration.py  test_server.py
